@@ -28,7 +28,7 @@ import org.glassfish.hk2.utilities.binding.AbstractBinder;
 import org.glassfish.jersey.server.ResourceConfig;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 public class MirrorRestServer extends RestServer {
@@ -48,14 +48,12 @@ public class MirrorRestServer extends RestServer {
 
     @Override
     protected Collection<Class<?>> regularResources() {
-        return Collections.singletonList(
-                InternalMirrorResource.class
-        );
+        return List.of(InternalMirrorResource.class);
     }
 
     @Override
     protected Collection<Class<?>> adminResources() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
@@ -70,5 +68,4 @@ public class MirrorRestServer extends RestServer {
             bind(restClient).to(RestClient.class);
         }
     }
-
 }
